# realtime-market-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: dbt_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mart_trading_summary.sql
dbt/models/staging/: sources.yml  stg_prices.sql  stg_trades.sql
src/common/: README.md  config.py  kafka_client.py  logging.py  metrics.py
src/consumers/: bigquery_consumer.py
src/producers/: binance_ws.py  coingecko.py
